fix: adjust profile picture alignment and remove unnecessary top offset in style.css

--- a/style.css
+++ b/style.css
@@ -70,6 +70,7 @@ h1 {
 }
 
 .profile-pic-wrapper {
+  align-self: end;
   position: relative;
   width: 100%;
   max-width: 594px;
@@ -83,7 +84,6 @@ h1 {
   position: absolute;
   left: -40px;
   bottom: 0;
-  top: -5px;
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -178,6 +178,7 @@ h1 {
   height: 104px;
   display: flex;
   background-color: #89bcd9;
+  flex-shrink: 0;
 }
 
 .navbar-content {
